Format CSS and fix dark mode on file

--- a/css/file.css
+++ b/css/file.css
@@ -8,12 +8,16 @@
 .demo-droppable.dragover {
   background: #e58900;
 }
+
 .code {
   font-size: 3rem;
 }
+
 .modal img {
   width: 100%;
+  display: none;
 }
+
 .modal {
   max-height: 100vh;
 }
